# resizer

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  WINDOWS_GUIDE.md  batch_resizer.jsx  build-windows.bat  build-windows.ps1  prd.md
benches/: resize_benchmark.rs
examples/: basic_usage.rs  batch_processing.rs  config_example.toml
src/: error.rs  lib.rs  main.rs
src/config/: mod.rs  profiles.rs
src/parallel/: mod.rs  progress.rs  scheduler.rs
src/processing/: formats.rs  memory.rs  mod.rs  resize.rs  validation.rs
